--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <span style="border: solid 2px #0000ff">Eu sou um elemento de linha</span>
     <div class="container">
       <header class="cabecalho">
-        <h1 style="text-alig: center">Minha pagina</h1>
+        <h1 style="text-align: center">Minha pagina</h1>
         <nav>
           <ul>
             <li><a href="https://www.fiap.com.br" target="_blank">Home</a></li>
@@ -31,7 +31,6 @@
             <li><a href="#">Item - 3</a></li>
           </ul>
         </nav>
-        #era para control espace montar a lista mais n ta funcionando
       </footer>
     </div>
 
