--- a/paginas/index.html
+++ b/paginas/index.html
@@ -1,56 +1,170 @@
 # pixabay, flaticons copyright free
+<!-- Este é um comentário em HTML. -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8/" />
-    <meta neam="viewport" content="width:device-width, initial-scale=1.0" />
-    <title>Exemplo</title>
+<!-- Este é o DTD do HTML5. -->
+<!-- Document Type Definition é a instrução que vai orientar o browser a carregar o conjunto correto de bibliotecas da versão do HTML em questão. -->
 
+<html lang="pt-br">
+  <!-- primeiro filho do html = head. -->
+  <head>
+    <!-- Os filhos do head são em sua maioria tags de metadados. Ex: meta. -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width:device-width,initial-scale=1.0" />
+    <title>Página Básica</title>
     <style>
-    *{ margin :0;
-      padding :0;
-      box-sizing : border-box;
+      *{
+        margin:0;
+        padding:0;
+        box-sizing: border-box;
+      }
+      #cabecalho h1{
+        text-align: center;
+        color: aliceblue;
+        background-color: black;
+        padding: 20px 0;
+        box-shadow:4x 3x 5x #f00;
+        border-radius: 5px;
+        font-size: 64px;
+      }
+      #cabecalho nav{
+        margin:15px 0;
+      
+      }
+      #cabecalho ul{
+        list-style: none;
+      }
+      #cabecalho li{
+        display: inline-block;
+      }
+      #cabecalho li img {
+        display: block;
+        width: 30%;
+        min-width: 10%;
       }
     </style>
 
-
-
+    
 
   </head>
+  <!-- segundo filho do html = body -->
   <body>
-    <span style="border: solid 2px #00ff00">Eu sou um elemento de linha</span>
-    <span style="border: solid 2px #0000ff">Eu sou um elemento de linha</span>
     <div class="container">
-      <header class="cabecalho">
-        <h1 style="text-alig: center">Minha pagina</h1>
+      <!-- O container é uma div que serve como contêiner geral para todo o conteúdo da página. -->
+      <header id="cabecalho">
         <nav>
-          <ul>
-            <li><a href="https://www.fiap.com.br" target="_blank">Home</a></li>
-            <li><a href="https://www.google.com" target="_blank">Google</a></li>
-            <li><a href="https://www.github.com" target="_blank">Github</a></li>
-          </ul>
+          <h1>Minha Página</h1>
+           <ul>
+<li><a href="./paginas/help.html"> <img src="./img/help.png" alt="Caixa de texto com uma Interrogação."/></a></li>
+<li><a href="./paginas/about.html"> <img src="./img/about.png" alt="Letra i em um circulo." /></a></li>
+<li><a href="#contact"> <img src="./img/contact.png" alt="Envelope de carta." /> </a></li>
+        </ul>
         </nav>
-      </header>
+      </header> 
+
+      <hr />
 
       <section id="conteudo-principal">
-        <p>Conteudo....</p>
+        <div>
+          <h1>HELP</h1>
+          <p>
+            Help - Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+            ipsam vero animi corporis modi quos, provident alias. Dicta ea
+            laudantium quaerat vitae reiciendis iusto ipsam alias dolores dolor
+            quis sint officia praesentium quos accusantium nisi, ipsum ipsa est
+            a voluptatibus aspernatur! Nihil consequatur vitae ullam eius modi,
+            ipsa repellendus veniam, quaerat unde quisquam, nostrum libero dicta
+            voluptatem temporibus. Nihil, hic! Esse laborum, obcaecati aut
+            corrupti maxime ullam saepe? Dolor minima tempore ipsam ducimus enim
+            odio quas? Nesciunt, aperiam. Voluptas autem recusandae at est
+            facilis nisi ducimus tempore eum odio maxime. Doloremque
+            necessitatibus voluptate, amet laborum laudantium ex expedita ad
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+            itaque quia repellendus, assumenda quae rerum ab blanditiis ipsa
+            reprehenderit corporis fuga, asperiores dolorem. Expedita tempore
+            quisquam minus vitae possimus similique voluptates consequatur hic
+            laborum id asperiores architecto facilis accusamus alias laboriosam
+            aperiam, impedit provident. Sit culpa consequatur pariatur alias
+            deserunt, esse nulla ratione vitae cum ad earum, odio nobis
+            incidunt? Est fugiat alias sint, maxime, corrupti dolore quas quo
+            eum expedita perspiciatis reiciendis ipsum praesentium itaque
+            dignissimos magni vero, fuga aliquam possimus. Corrupti odit
+            similique magnam delectus iste autem error. Enim natus excepturi
+            exercitationem non quod, aspernatur blanditiis autem dignissimos
+            explicabo corporis id ad similique eos soluta!
+          </p>
+          <a href="./paginas/help.html">Mais...</a>
+        </div>
+        <div>
+          <h2>ABOUT</h2>
+          <p>
+            About - Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
+            maxime repellat animi iste aliquid! Magni quibusdam quae sequi
+            accusantium unde quis, sunt enim illo quia inventore error voluptas
+            aspernatur hic tenetur ex provident culpa tempore vitae in?
+            Molestiae unde minima harum obcaecati? Cumque architecto velit
+            debitis officiis. Alias, repellendus est. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Ad, ea quae, incidunt nostrum quod
+            impedit reiciendis, voluptatibus tenetur repellendus aliquid nemo
+            non. Exercitationem ullam libero consectetur assumenda sed odio
+            autem tenetur, quod vero. Debitis excepturi sint odit nostrum at
+            dolorum iste officiis vitae modi quia tempore quibusdam eius odio
+            asperiores dolores minima tempora suscipit sed exercitationem
+            accusantium reprehenderit deserunt, dicta id! Excepturi, inventore
+            sunt in et, ab laudantium magni dicta, facilis incidunt aspernatur
+            labore modi assumenda soluta quisquam accusamus nisi libero
+            voluptatibus asperiores voluptate architecto laboriosam! Doloribus
+            voluptatibus asperiores minus ad voluptatum dicta necessitatibus sed
+            atque sapiente explicabo earum quibusdam veritatis eum amet aperiam
+            fugiat nam, obcaecati officiis. Eligendi temporibus ad atque hic
+            blanditiis iure corrupti placeat fuga quos, ut reiciendis quibusdam
+            culpa, inventore officiis modi obcaecati. Fugit ex atque, blanditiis
+            debitis dolores maxime vel corrupti praesentium libero, ipsum earum
+            sapiente. Molestias tempore excepturi quia aut vitae nulla, pariatur
+            illum! Distinctio exercitationem at quaerat! Quia vitae nemo,
+            ducimus sint esse repellendus enim sapiente?
+          </p>
+          <a href="./paginas/about.html">Mais...</a>
+        </div>
+        <div id="contact">
+          <h2>CONTACT</h2>
+          <form>
+            <fieldset>
+              <legend>Customer Contact</legend>
+              <div>
+                <label for="idNm">Name</label>
+                <input
+                  type="text"
+                  name="txtNm"
+                  id="idNm"
+                  placeholder="Type your name..."
+                />
+              </div>
+              <div>
+                <label for="idEmail">Email</label>
+                <input
+                  type="email"
+                  name="txtEmail"
+                  id="idEmail"
+                  placeholder="Type your email..."
+                />
+              </div>
+              <div>
+                <button type="button">Send</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
       </section>
+
       <footer class="rodape">
         <nav>
           <ul>
-            <li><a href="./paginas/help.html"><img src ="./img/questionMark.png" alt="Question Mark" width=""> </a></li>
-            <li><a href="./paginas/about.html"><img src ="" alt="> </a></li>
-            <li><a href="#contact">contact </a></li>
+            <li><a href="https://www.fiap.com.br" target="_blank"> FIAP</a></li>
+            <li><a href="https://www.google.com" target="_blank">Google</a></li>
+            <li><a href="https://github.com" target="_blank">Github</a></li>
           </ul>
         </nav>
-        #era para control espace montar a lista mais n ta funcionando
       </footer>
     </div>
-
-    <h1 style="border: solid 2px #ff0000">
-      Exemplo de conteudo estatico com um titulo
-    </h1>
-    <p style="border: solid 2px #00ff00">Eu sou um paragrafo.</p>
   </body>
 </html>
-
