--- a/paginas/about.html
+++ b/paginas/about.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
-  
   <head>
-    
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width:device-width,initial-scale=1.0" />
-    <title>Página Básica</title>
-    </head>
-    </html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ABOUT</title>
+
+    <link rel="stylesheet" href="../css/estilo-about.css" />
+  </head>
+  <body>
+    <div class="container">
+      <!-- O container é uma div que serve como contêiner geral para todo o conteúdo da página. -->
+      <header class="cabecalho">
+        <h1>ABOUT</h1>
+        <nav id="menu">
+          <ul>
+            <li class="link">
+              <a href="../paginas/help.html">
+                <img
+                  src="../img/help.png"
+                  alt="Caixa de texto com uma Interrogação."
+                />
+              </a>
+            </li>
+            <li class="link">
+              <a href="../index.html">
+                <img src="../img/home.png" alt="icone casa." />
+              </a>
+            </li>
+            <li class="link">
+              <a href="../index.html#contact">
+                <img src="../img/contact.png" alt="Envelope de carta." />
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+  </body>
+</html>
